--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ nav ul li:hover {
 .card-section .card {
     width: 220px;
     height: 200px;
-    border: 1px solid gray;
+    border: 1px solid green;
     border-radius: 5px;
     padding: 5px;
     overflow: hidden;
